@@ -14,8 +14,10 @@ HTML_FILES =					\
 	html/class-glibmainloop.html		\
 	html/glib-constants.html		\
 	html/glib-functions.html		\
+	html/gio-applaunchcontext.html		\
 	html/gobject-class-reference.html	\
 	html/glib-class-reference.html		\
+	html/gio-class-reference.html		\
 	html/gobject-constants.html		\
 	html/gobject-functions.html		\
 	html/index.html				\
@@ -38,7 +40,9 @@ XML_FILES = 					\
 	reference/pyglib-constants.xml 		\
 	reference/pyglib-functions.xml		\
 	reference/pyglib-maincontext.xml 	\
-	reference/pyglib-mainloop.xml
+	reference/pyglib-mainloop.xml 		\
+	reference/pygio-classes.xml 		\
+	reference/pygio-applaunchcontext.xml
 
 XSL_FILES =			\
 	xsl/common.xsl 		\
