@@ -1,0 +1,194 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+
+<refentry id="class-gdkapplaunchcontext">
+    <refnamediv>
+        <refname>gio.AppLaunchContext</refname>
+        <refpurpose>Application launch context.</refpurpose>
+    </refnamediv>
+
+    <refsect1>
+        <title>Synopsis</title>
+
+    <classsynopsis language="python">
+        <ooclass><classname>gio.AppLaunchContext</classname></ooclass>
+        <ooclass><classname><link linkend="class-gobject">gobject.GObject</link></classname></ooclass>
+    
+    <constructorsynopsis language="python">
+	<methodname><link linkend="constructor-gioapplaunchcontext">gio.AppLaunchContext</link></methodname>
+	<methodparam></methodparam>
+    </constructorsynopsis>
+    
+    <methodsynopsis language="python">
+        <methodname><link linkend="method-gioapplaunchcontext--get-display">get_display</link></methodname>
+        <methodparam><parameter role="keyword">info</parameter></methodparam>
+        <methodparam><parameter role="keyword">files</parameter></methodparam>
+    </methodsynopsis>
+    <methodsynopsis language="python">
+        <methodname><link linkend="method-gioapplaunchcontext--get-startup-notify-id">get_startup_notify_id</link></methodname>
+        <methodparam><parameter role="keyword">info</parameter></methodparam>
+        <methodparam><parameter role="keyword">files</parameter></methodparam>
+    </methodsynopsis>
+    <methodsynopsis language="python">
+        <methodname><link linkend="method-gioapplaunchcontext--launch-failed">launch_failed</link></methodname>
+        <methodparam><parameter role="keyword">startup_notify_id</parameter></methodparam>
+    </methodsynopsis>
+    
+    </classsynopsis>
+    </refsect1>
+
+    <refsect1>
+        <title>Ancestry</title>
+
+<synopsis>+-- <link linkend="class-gobject">gobject.GObject</link>
+  +-- <link linkend="class-gioapplaunchcontext">gio.AppLaunchContext</link>
+</synopsis>
+
+    </refsect1>
+
+    <refsect1>
+        <title>Description</title>
+
+        <para>
+            The <link linkend="class-gioapplaunchcontext"><classname>gio.AppLaunchContext</classname></link>
+            is used for integrating the launch with the launching application. This is used to handle for
+            instance startup notification and launching the new application on the same screen as the launching window.
+        </para>
+    </refsect1>
+
+    <refsect1 id="constructor-gioapplaunchcontext">
+        <title>Constructor</title>
+  
+        <programlisting><constructorsynopsis language="python">
+            <methodname>gio.AppLaunchContext</methodname>
+            <methodparam></methodparam>
+        </constructorsynopsis></programlisting>
+        <variablelist>
+            <varlistentry>
+                <term><emphasis>Returns</emphasis>&nbsp;:</term>
+                <listitem><simpara>a new
+                <link linkend="class-gioapplaunchcontext"><classname>gio.AppLaunchContext</classname></link>.
+                </simpara></listitem>
+            </varlistentry>
+        </variablelist>
+    
+        <para>
+            Creates a new application launch context. This is not normally used, instead
+            you instantiate a subclass of this, such as
+            <link linkend="class-gdkapplaunchcontext"><classname>gtk.gdk.AppLaunchContext</classname></link>.
+        </para>
+  
+    </refsect1>
+
+    <refsect1>
+        <title>Methods</title>
+
+        <refsect2 id="method-gioapplaunchcontext--get-display">
+            <title>gio.AppLaunchContext.get_display</title>
+
+            <programlisting><methodsynopsis language="python">
+                <methodname>get_display</methodname>
+                <methodparam><parameter role="keyword">info</parameter></methodparam>
+                <methodparam><parameter role="keyword">files</parameter></methodparam>
+            </methodsynopsis></programlisting>
+            
+            <variablelist>
+                <varlistentry>
+                    <term><parameter>info</parameter>&nbsp;:</term>
+                    <listitem><simpara>a
+                    <link linkend="class-gioappinfo"><classname>gio.AppInfo</classname></link>
+                    </simpara></listitem>
+                </varlistentry>
+                <varlistentry>
+                    <term><parameter>files</parameter>&nbsp;:</term>
+                    <listitem><simpara>a list of
+                    <link linkend="class-giofile"><classname>gio.File</classname></link>
+                    objects.</simpara></listitem>
+                </varlistentry>
+                <varlistentry>
+                    <term><emphasis>Returns</emphasis>&nbsp;:</term>
+                    <listitem><simpara>a display string for the display. 
+                    </simpara></listitem>
+                </varlistentry>
+            </variablelist>
+    
+            <para>
+                The <methodname>get_display</methodname>() method gets the display
+                string for the display. This is used to ensure new applications
+                are started on the same display as the launching application.
+            </para>
+        </refsect2>
+
+        <refsect2 id="method-gioapplaunchcontext--get-startup-notify-id">
+            <title>gio.AppLaunchContext.get_startup_notify_id</title>
+
+            <programlisting><methodsynopsis language="python">
+                <methodname>get_startup_notify_id</methodname>
+                <methodparam><parameter role="keyword">info</parameter></methodparam>
+                <methodparam><parameter role="keyword">files</parameter></methodparam>
+            </methodsynopsis></programlisting>
+            
+            <variablelist>
+                <varlistentry>
+                    <term><parameter>info</parameter>&nbsp;:</term>
+                    <listitem><simpara>a
+                    <link linkend="class-gioappinfo"><classname>gio.AppInfo</classname></link>
+                    </simpara></listitem>
+                </varlistentry>
+                <varlistentry>
+                    <term><parameter>files</parameter>&nbsp;:</term>
+                    <listitem><simpara>a list of
+                    <link linkend="class-giofile"><classname>gio.File</classname></link>
+                    objects.</simpara></listitem>
+                </varlistentry>
+                <varlistentry>
+                    <term><emphasis>Returns</emphasis>&nbsp;:</term>
+                    <listitem><simpara>a startup notification ID for the application,
+                    or <literal>None</literal> if not supported. 
+                    </simpara></listitem>
+                </varlistentry>
+            </variablelist>
+    
+            <para>
+                The <methodname>get_startup_notify_id</methodname>() method initiates
+                startup notification for the application and returns the DESKTOP_STARTUP_ID
+                for the launched operation, if supported. 
+            </para>
+            <para>
+                Startup notification IDs are defined in the FreeDesktop.Org Startup Notifications standard.
+            </para>
+        </refsect2>
+
+        <refsect2 id="method-gioapplaunchcontext--launch-failed">
+            <title>gio.AppLaunchContext.launch_failed</title>
+
+            <programlisting><methodsynopsis language="python">
+                <methodname>launch_failed</methodname>
+                <methodparam><parameter role="keyword">startup_notify_id</parameter></methodparam>
+            </methodsynopsis></programlisting>
+            
+            <variablelist>
+                <varlistentry>
+                    <term><parameter>startup_notify_id</parameter>&nbsp;:</term>
+                    <listitem><simpara>the startup notification id that was returned by
+                    <methodname><link linkend="method-gioapplaunchcontext--get-startup-notify-id">get_startup_notify_id</link></methodname>.
+                    </simpara></listitem>
+                </varlistentry>
+                <varlistentry>
+                    <term><emphasis>Returns</emphasis>&nbsp;:</term>
+                    <listitem><simpara>a startup notification ID for the application,
+                    or <literal>None</literal> if not supported. 
+                    </simpara></listitem>
+                </varlistentry>
+            </variablelist>
+    
+            <para>
+                The <methodname>get_startup_notify_id</methodname>() method is called
+                when an application has failed to launch, so that it can cancel the application
+                startup notification started in
+                <methodname><link linkend="method-gioapplaunchcontext--get-startup-notify-id">get_startup_notify_id</link></methodname>
+            </para>
+        </refsect2>
+    </refsect1>
+</refentry>
