@@ -1,0 +1,12 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE chapter PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+<chapter id="gio-class-reference"
+  xmlns:xi="http://www.w3.org/2001/XInclude">
+
+<title>PyGioClass Reference</title>
+
+<!-- GLIB CLASSES -->
+<xi:include href="pygio-applaunchcontext.xml"/>
+
+</chapter>
